--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "A porftolio made with React and TypeScript",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=\\\"production\\\" && esbuild src/EntryPoint/index.tsx --bundle --outfile=out.js",
     "dev": "esbuild src/EntryPoint/index.tsx --bundle --serve --sourcemap --define:process.env.NODE_ENV=\\\"development\\\" --loader=tsx",
-    "start:craco": "craco start",
-    "build:craco": "craco build",
-    "test:craco": "craco test"
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -21,13 +18,9 @@
   },
   "homepage": "https://github.com/scrummer123/scrummer123.github.io#readme",
   "dependencies": {
-    "@craco/craco": "^6.0.0",
-    "autoprefixer": "^9.8.6",
     "esbuild": "^0.8.22",
-    "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
