--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A porftolio made with React and TypeScript",
   "main": "index.js",
   "scripts": {
-    "dev": "esbuild src/EntryPoint/index.tsx --bundle --serve --sourcemap --define:process.env.NODE_ENV=\\\"development\\\" --loader=tsx"
+    "build:tailwind": "tailwindcss build src/EntryPoint/index.css -o public/css/tailwind.output.css",
+    "build": "npm run build:tailwind",
+    "watch": "node esbuild.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +19,16 @@
   },
   "homepage": "https://github.com/scrummer123/scrummer123.github.io#readme",
   "dependencies": {
+    "@types/classnames": "^2.2.11",
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
+    "classnames": "^2.2.6",
+    "css-loader": "^5.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "fs-extra": "^9.0.1",
     "identity-obj-proxy": "3.0.0",
+    "postcss": "^8.2.1",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
@@ -37,6 +43,7 @@
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.2",
+    "tailwindcss": "^2.0.2",
     "ts-pnp": "1.2.0",
     "typescript": "^4.1.3"
   },
