--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:tailwind": "tailwindcss build src/EntryPoint/index.css -o public/css/tailwind.output.css",
+    "watch:postcss": "postcss -w src/EntryPoint/index.css -o public/css/tailwind.output.css",
     "build": "npm run build:tailwind",
     "watch": "node esbuild.js"
   },
@@ -28,7 +29,6 @@
     "dotenv-expand": "5.1.0",
     "fs-extra": "^9.0.1",
     "identity-obj-proxy": "3.0.0",
-    "postcss": "^8.2.1",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
@@ -48,19 +48,16 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
     "@babel/core": "7.12.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "esbuild": "^0.8.22",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -70,7 +67,12 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
-    "esbuild": "^0.8.22"
+    "jest": "26.6.0",
+    "jest-circus": "26.6.0",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1"
   },
   "jest": {
     "roots": [
