--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "^9.0.1",
     "identity-obj-proxy": "3.0.0",
     "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-import": "^14.0.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
