Testing gh pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy
+        uses: alex-page/blazing-fast-gh-pages-deploy@v1.0.0
         with:
           deploy-branch: master
           site-directory: public
