Testing gh pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,3 +14,4 @@ jobs:
         with:
           deploy-branch: master
           site-directory: public
+          repo-token: ${{ secrets.GH_PAT }}
