--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:postcss": "postcss src/EntryPoint/index.css -d public/css",
     "test": "echo test",
     "build": "esbuild --define:process.env.NODE_ENV=\\\"production\\\" --splitting --minify --bundle src/EntryPoint/index.tsx --outdir=public/js --format=esm && npm run build:postcss",
-    "watch": "node esbuild.js"
+    "watch": "node esbuild.js",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/scrummer123/scrummer123.github.io/issues"
   },
-  "homepage": "https://github.com/scrummer123/scrummer123.github.io#readme",
+  "homepage": "https://scrummer123.github.io/",
   "dependencies": {
     "@types/classnames": "^2.2.11",
     "bfj": "^7.0.2",
@@ -73,6 +74,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
+    "gh-pages": "^3.1.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
