--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,18 @@
 name: Build and Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - production
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        uses: actions/checkout@v2
 
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build
         run: |
           npm install
           npm run build
@@ -18,4 +21,5 @@ jobs:
         run: |
           git config --global user.email ${{ secrets.CONFIG_EMAIL }}
           git config --global user.name ${{ secrets.CONFIG_NAME }}
-          git remote set-url origin https://${{ secrets.GHPAGES_TOKEN }}@github.com/${{ secrets.CONFIG_NAME }}/scrummer123.github.io.git
+          git remote set-url origin ${{ secrets.GHPAGES_TOKEN }}@github.com:${{ secrets.CONFIG_NAME }}/scrummer123.github.io.git
+          npm run deploy
