--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
         run: |
           git config --global user.email ${{ secrets.CONFIG_EMAIL }}
           git config --global user.name ${{ secrets.CONFIG_NAME }}
-          git remote set-url origin ${{ secrets.GHPAGES_TOKEN }}@github.com:${{ secrets.CONFIG_NAME }}/scrummer123.github.io.git
+          git remote set-url origin https://${{ secrets.GHPAGES_TOKEN }}@github.com/${{ secrets.CONFIG_NAME }}/scrummer123.github.io.git
           npm run deploy
