--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           npm install
           npm run build
+          npm run deploy
           ls -l --block-size=kB public/js/index.js
 
       - name: Deploy
