--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
-          ls -l --block-size=kB public/js/index.js
-
-      - name: Deploy
+      - name: Init git config
         run: |
           git config --global user.email ${{ secrets.CONFIG_EMAIL }}
           git config --global user.name ${{ secrets.CONFIG_NAME }}
           git remote set-url origin https://${{ secrets.GHPAGES_TOKEN }}@github.com/${{ secrets.CONFIG_NAME }}/scrummer123.github.io.git
+
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build
           npm run deploy
+          ls -l --block-size=kB public/js/index.js
