:x: Cancelled, hugo can't parse @layer syntax from modern tailwind versions

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 baseurl: "http://localhost/"
-title: "testing hugo"
+title: "Simon webdev"
 
 contentdir:   "hugo/content"
 dataDir:      "hugo/data"
