--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Simon's personal portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -15,10 +18,5 @@
   "bugs": {
     "url": "https://github.com/simon-instance/simon-instance.github.io/issues"
   },
-  "homepage": "https://github.com/simon-instance/simon-instance.github.io#readme",
-  "dependencies": {
-    "next": "^10.0.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  }
+  "homepage": "https://github.com/simon-instance/simon-instance.github.io#readme"
 }
