--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
         run: |
           npm install
           npm run build
+          npm run export
           npm run deploy
-          ls -l --block-size=kB public/js/index.js
