--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && gh-pages -d out"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,24 @@
   "bugs": {
     "url": "https://github.com/simon-instance/simon-instance.github.io/issues"
   },
-  "homepage": "https://github.com/simon-instance/simon-instance.github.io#readme"
+  "homepage": "https://github.com/simon-instance/simon-instance.github.io#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.19",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "cssnano": "^4.1.10",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "gh-pages": "^3.1.0",
+    "next": "^10.0.4",
+    "postcss": "^8.2.2",
+    "postcss-import": "^14.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "sass": "^1.32.0",
+    "tailwindcss": "^2.0.2"
+  }
 }
