--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && gh-pages -d out"
+    "export": "next export",
+    "deploy": "rm -rf node_modules/.cache && touch out/.nojekyll && gh-pages -d out"
   },
   "repository": {
     "type": "git",
