:zap: Added \`extends Partial<FrontEndData>\` for better dispatch compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "typeRoots": ["./node_modules/@types", "./types"],
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@portfolio-providers/*": ["./providers/*"],
-      "@portfolio-components/*": ["./components/*"],
-      "@portfolio-pages/*": ["./pages/*"],
-      "@portfolio-styles/*": ["./styles/*"],
-      "@portfolio-public/*": ["./public/*"],
-      "@portfolio-types/*": ["./types/*"],
+      "@portfolio-providers/*": ["providers/*"],
+      "@portfolio-components/*": ["components/*"],
+      "@portfolio-pages/*": ["pages/*"],
+      "@portfolio-styles/*": ["styles/*"],
+      "@portfolio-public/*": ["public/*"],
+      "@portfolio-types/*": ["types/*"],
     }
   },
   "include": [
