--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "svelte": "^3.35.0",
+    "svelte-icons": "^2.1.0",
     "svelte-loader": "^3.0.0",
     "svelte-navaid": "^0.1.1",
     "svelte-preprocess": "^4.6.9"
