--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^2.0.4"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "svelte": "^3.35.0",
     "svelte-icons": "^2.1.0",
     "svelte-loader": "^3.0.0",
