--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,28 @@ name: Deploy
 on:
   push:
     branches:
-      - source
+      - production
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Init git config
+        run: |
+          git config --global user.email ${{ secrets.CONFIG_EMAIL }}
+          git config --global user.name ${{ secrets.CONFIG_NAME }}
+          git remote set-url origin https://${{ secrets.CONFIG_GHPAGES }}@github.com/${{ secrets.CONFIG_NAME }}/simon-instance.github.io.git
+
+      - name: Build the app
       - shell: bash
         env:
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          LASTFM: ${{ secrets.LASTFM }}
+          NODE_ENV: production
+        run: |
+          npm i
+          npm run build
+          rm -f ./build/index.js.map
+          npm run deploy
