--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,16 +8,17 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-      run: |
+    steps:
+      env:
+        LASTFM: ${{ secrets.LASTFM }}
+        NODE_ENV: production
+
+      - run: |
         git config --global user.email ${{ secrets.CONFIG_EMAIL }}
         git config --global user.name ${{ secrets.CONFIG_NAME }}
         git remote set-url origin https://${{ secrets.CONFIG_GHPAGES }}@github.com/${{ secrets.CONFIG_NAME }}/simon-instance.github.io.git
 
-    - shell: bash
-      env:
-        LASTFM: ${{ secrets.LASTFM }}
-        NODE_ENV: production
-      run: |
+      - run: |
         npm i
         npm run build
         rm -f ./build/index.js.map
