--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
           git remote add origin https://${{ secrets.CONFIG_GHPAGES }}@github.com/${{ secrets.CONFIG_NAME }}/simon-instance.github.io.git
           git config --global user.email ${{ secrets.CONFIG_EMAIL }}
           git config --global user.name ${{ secrets.CONFIG_NAME }}
+          git fetch origin
+          git checkout production
       - run: |
           npm i
           npm run build
