--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,21 @@ jobs:
       LASTFM: ${{ secrets.LASTFM }}
       NODE_ENV: production
     steps:
-      - run: git init
-      - run: |
+      - name: Checkout️
+        uses: actions/checkout@v2.3.1
+
+      - name: Init git config
+        run: |
+          git init
           git remote add origin https://${{ secrets.CONFIG_GHPAGES }}@github.com/${{ secrets.CONFIG_NAME }}/simon-instance.github.io.git
           git config --global user.email ${{ secrets.CONFIG_EMAIL }}
           git config --global user.name ${{ secrets.CONFIG_NAME }}
           git fetch origin
           git checkout production
-      - run: npm i
-      - run: |
+
+      - name: Deploy to gh-pages branch
+        run: |
+          npm i
           npm run build
           rm -f ./build/index.js.map
           npm run deploy
